[package]
name = "heapsize"
version = "0.4.2"
authors = [ "The Servo Project Developers" ]
description = "Infrastructure for measuring the total runtime size of an object on the heap"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/heapsize"
build = "build.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["std", "heapapi"] }

[dependencies]
jemallocator = { version = "0.1", optional = true }

[features]
default = [ "force-jemalloc" ] # just for test (conflicts with windows build)
unstable = []

# https://github.com/servo/heapsize/issues/74
flexible-tests = []
force-jemalloc = [ "jemallocator" ]
