[package]
name = "heapsize"
version = "0.4.2"
authors = [ "The Servo Project Developers" ]
description = "Infrastructure for measuring the total runtime size of an object on the heap"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/heapsize"
build = "build.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["std", "heapapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.1" }

[features]
unstable = []

# https://github.com/servo/heapsize/issues/74
flexible-tests = []
